...
    Dialog(onDismissRequest = close, properties = DialogProperties(usePlatformDefaultWidth = false,
        dismissOnBackPress = !state.busy, dismissOnClickOutside = false)) {
        Scaffold(
            containerColor = MaterialTheme.colorScheme.background,
            modifier = Modifier.fillMaxSize().imePadding(),
            topBar = {
                TopAppBar(title = { Text(if (state.settingsShown) "Music Tag 服务" else "音乐标签") },
                    colors = TopAppBarDefaults.topAppBarColors(containerColor = MaterialTheme.colorScheme.background),
                    navigationIcon = { IconButton(onClick = close, enabled = !state.busy) {
                        Icon(Icons.AutoMirrored.Rounded.ArrowBack, "返回")
                    } }, actions = {
                        if (!state.settingsShown) IconButton(onClick = viewModel::showSettings, enabled = !state.busy) {
                            Icon(Icons.Rounded.Settings, "Music Tag 服务设置")
...
